# GD32E230-Simple-Digital-Oscilloscope

./: .gitignore  CMakeLists.txt  CMakePresets.json  GD32E230x8_FLASH.ld  README.md  startup_gd32e23x.S
Core/Inc/: font.h  key.h  main.h  tft.h  tft_init.h  timer.h
Core/Src/: adc.c  freq.c  gd32e23x_it.c  key.c  led.c  main.c  syscalls.c  sysmem.c  system_gd32e23x.c  tft.c  tft_init.c  timer.c  usart.c
Misc/: GigaDevice.GD32E23x_DFP.2.5.0.pack  pyocd.yaml
Misc/SVD/: GD32E23x.svd
Oscilloscope/Hardware/TFT/: font.h  tft.c
Oscilloscope/Project/: Oscilloscope.uvprojx
cmake/: gcc-arm-none-eabi.cmake
cmake/gd32e23x/: CMakeLists.txt
